# codex-flow

./: pyproject.toml
plans/: master.md
plans/deferred/: grounded-plan-bundles.md
plans/phases/: 00-foundation-and-contracts.md  01-session-and-preflight.md  02-handoff-launcher.md  03-skill-and-handoff.md  04-reporting-and-review.md  05-repair-and-lineage.md  06-delegation-routing.md  07-installation-and-validation.md  index.md
scripts/: dev_link.py
skills/codex-flow/: SKILL.md
skills/codex-flow/agents/: openai.yaml
skills/codex-flow/references/: evidence-contracts.md  handoff.md  model-selection.md  review.md
src/codex_flow/: __init__.py  atomic.py  cli.py  contracts.py  devlinks.py  errors.py  evidence.py  git.py  inspection.py  launcher.py  models.py  paths.py  preflight.py  rollouts.py
tests/: test_atomic.py  test_cli.py  test_compatibility_fixtures.py  test_contracts.py  test_devlinks.py  test_errors.py  test_evidence.py  test_git_preflight.py  test_inspection.py  test_launcher.py  test_models.py  test_paths.py  test_rollouts.py  test_skill.py
tests/fixtures/: sanitized_execution_fork.jsonl  sanitized_execution_root.jsonl  sanitized_models.json  sanitized_rollout.jsonl  sanitized_subagent_rollout.jsonl
