[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-flow"
version = "0.1.0"
description = "Foundation contracts and CLI skeleton for Codex Flow"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
codex-flow = "codex_flow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
